# rust_fn_check

./: Cargo.toml  text.txt
src/: main.rs
