[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
futures = "0.3.21"
simple_excel_writer = "0.2.0"
regex = "1.5.6"