[package]
name = "fn_kkt_check"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
reqwest = {version = "0.11.11", features = ["json"]}
tokio = {version = "1.19.2", features = ["full"]}
futures = "0.3.21"
simple_excel_writer = "0.2.0"